--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,6 @@
 title: Skill-IT: Getting Started with AI
 description: A brief how-to in order to get started with AI
 remote_theme: pages-themes/minimal@v0.2.0
+markdown: kramdown
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
